# pagesign

./: .gitignore  .hgignore  .hgtags  LICENSE.txt  MANIFEST.in  README.rst  pagesign.py  setup.cfg  setup.py  test_pagesign.py
.github/workflows/: tests.yml
docs/: Makefile  conf.py  index.rst  requirements.txt  spelling_wordlist.txt
