[metadata]
name = pagesign
version = attr: pagesign.__version__
description = A wrapper for the modern encryption and signing tools age and minisign
long_description = This module allows easy access to key management, encryption and
    signature functionality using age and minisign from Python programs. It is intended
    for use with Python 3.6 or greater.

    Releases are normally signed using minisign, and files in a release can be verified
    by downloading a file and its signature into the same directory and running

      minisign -Vm <file> -P RWTobFh2+FfcAHXgOfx6voa7Rvm5C0CwPlQufQzIEKEZtfFzewaK/KqE

    where the -P argument is the public counterpart of the private signing key.

    You should be able to download release archives and signatures from

    https://github.com/vsajip/pagesign/releases/

    The archives should be the same as those uploaded to PyPI.
url = https://github.com/vsajip/pagesign
author = Vinay Sajip
author_email = vinay_sajip@yahoo.co.uk
maintainer = Vinay Sajip
maintainer_email = vinay_sajip@yahoo.co.uk
license = BSD
license_file = LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules"
project_urls =
    Documentation = https://docs.red-dove.com/pagesign/
    Source = https://github.com/vsajip/pagesign
    Tracker = https://github.com/vsajip/pagesign/issues
keywords = cryptography,encryption,decryption.signing,verification,age,minisign
platforms = any

[options]
py_modules = pagesign

[bdist_wheel]
universal = 1
